--- a/books/Storyboards/SearchOnline.storyboard
+++ b/books/Storyboards/SearchOnline.storyboard
@@ -44,71 +44,69 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="Vde-59-8Z3">
-                                <rect key="frame" x="0.0" y="64" width="375" height="56"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="search"/>
-                            </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="92" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="1nj-su-2IL">
-                                <rect key="frame" x="0.0" y="120" width="375" height="547"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="0.0" reuseIdentifier="SearchResultCell" rowHeight="92" id="pxp-e4-NYa" customClass="SearchResultCell" customModule="Reading_List" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="18" width="375" height="92"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pxp-e4-NYa" id="dpo-Wk-IQW">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="91.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sGz-LH-emc">
-                                                    <rect key="frame" x="63" y="8" width="304" height="20"/>
-                                                    <accessibility key="accessibilityConfiguration" identifier="title"/>
-                                                    <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="03S-Dj-81P">
-                                                    <rect key="frame" x="4" y="4" width="51" height="83"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="jHg-wa-mMg">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <subviews>
+                                    <tableView contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="92" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="1nj-su-2IL">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="0.0" reuseIdentifier="SearchResultCell" rowHeight="92" id="pxp-e4-NYa" customClass="SearchResultCell" customModule="Reading_List" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="18" width="375" height="92"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pxp-e4-NYa" id="dpo-Wk-IQW">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="91.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sGz-LH-emc">
+                                                            <rect key="frame" x="63" y="8" width="304" height="20"/>
+                                                            <accessibility key="accessibilityConfiguration" identifier="title"/>
+                                                            <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="17"/>
+                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="03S-Dj-81P">
+                                                            <rect key="frame" x="4" y="4" width="51" height="83"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="03S-Dj-81P" secondAttribute="height" multiplier="1:1.6" id="Y9T-ey-E8G"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Authors" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TCx-jl-N1X">
+                                                            <rect key="frame" x="63" y="28" width="304" height="17.5"/>
+                                                            <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="15"/>
+                                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" secondItem="03S-Dj-81P" secondAttribute="height" multiplier="1:1.6" id="Y9T-ey-E8G"/>
+                                                        <constraint firstItem="TCx-jl-N1X" firstAttribute="leading" secondItem="sGz-LH-emc" secondAttribute="leading" id="P1P-vR-XgA"/>
+                                                        <constraint firstAttribute="bottom" secondItem="03S-Dj-81P" secondAttribute="bottom" constant="4" id="Pw6-vN-LfU"/>
+                                                        <constraint firstItem="sGz-LH-emc" firstAttribute="leading" secondItem="03S-Dj-81P" secondAttribute="trailing" constant="8" id="Qek-ak-oA6"/>
+                                                        <constraint firstItem="TCx-jl-N1X" firstAttribute="trailing" secondItem="sGz-LH-emc" secondAttribute="trailing" id="S5j-t5-YPV"/>
+                                                        <constraint firstItem="03S-Dj-81P" firstAttribute="leading" secondItem="dpo-Wk-IQW" secondAttribute="leading" constant="4" id="c0T-A5-BKf"/>
+                                                        <constraint firstItem="sGz-LH-emc" firstAttribute="top" secondItem="dpo-Wk-IQW" secondAttribute="topMargin" id="c9y-FM-8h5"/>
+                                                        <constraint firstAttribute="trailing" secondItem="sGz-LH-emc" secondAttribute="trailing" constant="8" id="et9-FO-hTd"/>
+                                                        <constraint firstItem="TCx-jl-N1X" firstAttribute="top" secondItem="sGz-LH-emc" secondAttribute="bottom" id="uOU-pJ-cQq"/>
+                                                        <constraint firstItem="03S-Dj-81P" firstAttribute="top" secondItem="dpo-Wk-IQW" secondAttribute="top" constant="4" id="vPR-7a-j68"/>
                                                     </constraints>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Authors" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TCx-jl-N1X">
-                                                    <rect key="frame" x="63" y="28" width="304" height="17.5"/>
-                                                    <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="15"/>
-                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="TCx-jl-N1X" firstAttribute="leading" secondItem="sGz-LH-emc" secondAttribute="leading" id="P1P-vR-XgA"/>
-                                                <constraint firstAttribute="bottom" secondItem="03S-Dj-81P" secondAttribute="bottom" constant="4" id="Pw6-vN-LfU"/>
-                                                <constraint firstItem="sGz-LH-emc" firstAttribute="leading" secondItem="03S-Dj-81P" secondAttribute="trailing" constant="8" id="Qek-ak-oA6"/>
-                                                <constraint firstItem="TCx-jl-N1X" firstAttribute="trailing" secondItem="sGz-LH-emc" secondAttribute="trailing" id="S5j-t5-YPV"/>
-                                                <constraint firstItem="03S-Dj-81P" firstAttribute="leading" secondItem="dpo-Wk-IQW" secondAttribute="leading" constant="4" id="c0T-A5-BKf"/>
-                                                <constraint firstItem="sGz-LH-emc" firstAttribute="top" secondItem="dpo-Wk-IQW" secondAttribute="topMargin" id="c9y-FM-8h5"/>
-                                                <constraint firstAttribute="trailing" secondItem="sGz-LH-emc" secondAttribute="trailing" constant="8" id="et9-FO-hTd"/>
-                                                <constraint firstItem="TCx-jl-N1X" firstAttribute="top" secondItem="sGz-LH-emc" secondAttribute="bottom" id="uOU-pJ-cQq"/>
-                                                <constraint firstItem="03S-Dj-81P" firstAttribute="top" secondItem="dpo-Wk-IQW" secondAttribute="top" constant="4" id="vPR-7a-j68"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="authorOutlet" destination="TCx-jl-N1X" id="MGX-kh-dC4"/>
-                                            <outlet property="imageOutlet" destination="03S-Dj-81P" id="Aln-lb-XTj"/>
-                                            <outlet property="titleOutlet" destination="sGz-LH-emc" id="WSe-bq-WUn"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
+                                                </tableViewCellContentView>
+                                                <connections>
+                                                    <outlet property="authorOutlet" destination="TCx-jl-N1X" id="MGX-kh-dC4"/>
+                                                    <outlet property="imageOutlet" destination="03S-Dj-81P" id="Aln-lb-XTj"/>
+                                                    <outlet property="titleOutlet" destination="sGz-LH-emc" id="WSe-bq-WUn"/>
+                                                </connections>
+                                            </tableViewCell>
+                                        </prototypes>
+                                    </tableView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="1nj-su-2IL" firstAttribute="leading" secondItem="Mt5-Jg-rxH" secondAttribute="leading" id="OH0-wr-DNv"/>
-                            <constraint firstAttribute="trailing" secondItem="1nj-su-2IL" secondAttribute="trailing" id="QbK-d5-1Zq"/>
-                            <constraint firstItem="1nj-su-2IL" firstAttribute="top" secondItem="Vde-59-8Z3" secondAttribute="bottom" id="Tx7-wP-nRv"/>
-                            <constraint firstItem="n0B-zH-dnZ" firstAttribute="top" secondItem="1nj-su-2IL" secondAttribute="bottom" id="Ux0-hq-khg"/>
-                            <constraint firstItem="Vde-59-8Z3" firstAttribute="top" secondItem="4rw-Hs-CL9" secondAttribute="bottom" id="YG1-Fi-zbz"/>
-                            <constraint firstAttribute="trailing" secondItem="Vde-59-8Z3" secondAttribute="trailing" id="fsF-jx-2ns"/>
-                            <constraint firstItem="Vde-59-8Z3" firstAttribute="leading" secondItem="Mt5-Jg-rxH" secondAttribute="leading" id="uBF-xd-dQa"/>
+                            <constraint firstItem="jHg-wa-mMg" firstAttribute="top" secondItem="4rw-Hs-CL9" secondAttribute="bottom" id="PEU-ji-tEg"/>
+                            <constraint firstItem="jHg-wa-mMg" firstAttribute="leading" secondItem="Mt5-Jg-rxH" secondAttribute="leading" id="aTc-dR-TGb"/>
+                            <constraint firstAttribute="bottom" secondItem="jHg-wa-mMg" secondAttribute="bottom" id="eFp-bU-QHp"/>
+                            <constraint firstAttribute="trailing" secondItem="jHg-wa-mMg" secondAttribute="trailing" id="nbo-Af-fF9"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Search Books" id="bXy-YI-GNG">
@@ -120,7 +118,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="searchBar" destination="Vde-59-8Z3" id="bL6-5L-juN"/>
+                        <outlet property="stackView" destination="jHg-wa-mMg" id="CL7-ef-SOU"/>
                         <outlet property="tableView" destination="1nj-su-2IL" id="yBi-z1-ZuF"/>
                         <segue destination="7vF-2L-Pie" kind="show" identifier="searchResultSelected" id="S39-PJ-HRt"/>
                     </connections>
